--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dkvault-sanctum",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev -p 9002",
     "build": "next build",
@@ -23,22 +24,21 @@
     "genkit": "^1.27.0",
     "lucide-react": "^0.475.0",
     "next": "16.1.1",
-    "radix-ui": "^1.4.3",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.19.27",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@types/uuid": "^11.0.0",
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.0"
   }
 }
